@@ -1,4 +1,5 @@
 0.02_5
+    - Use useragent_class in Net::Twitter 1.22
     - Added echo_posts option, defaults to 0
     - Net::Twitter 1.21 works around Twitter API fail on friendships/exists
     - error on messages longer than 140 characters
